2007-04-12  Chris Toshok  <toshok@ximian.com>

	* compzilla/src/compzillaControl.cpp: use the new hotness.

	* compzilla/src/compzillaRenderingContext.h: new improved api.

	* compzilla/src/compzillaRenderingContext.cpp: rework this so we
	don't copy twice, we only ever blit anything in ::Render.

2007-04-12  Alex Graveley  <alex@beatniksoftware.com>

	* compzilla/src/compzillaRenderingContext.cpp: Drop non-thebes,
	non-render fallback code and remove mImageSurfaceData.
	(CopyImageDataFrom): For non-thebes, avoid XGetImage and call
	cairo_xlib_surface_create for the drawable to avoid copying data.

	* compzilla/src/compzillaControl.cpp (Filter): Pass window's
	visual to CopyImageDataFrom.

2007-04-11  Alex Graveley  <alex@beatniksoftware.com>

	* compzilla/src/compzillaWindow.cpp (SendMouseEvent): Make mouse
	event sending sorta work.  Use new GetSubwindowAtPoint to get
	destination subwindow, and fake enter/leave events when the
	subwindow changes.

2007-04-11  Chris Toshok  <toshok@ximian.com>

	* compzilla/chrome/skin/compzilla.css: add the overlay div's
	style.

	* compzilla/chrome/skin/desktop.html: add the overlay div here so
	people can add their widgets.

	* compzilla/src/compzillaRenderingContext.cpp (CopyImageDataFrom):
	fix a copy of glaring memory leaks.  we seem okay with memory now.

2007-04-10  Alex Graveley  <alex@beatniksoftware.com>

	* compzilla/src/compzillaControl.cpp (Filter): Call XSetInputFocus
	on MapRequest.

	* compzilla/src/compzillaWindow.cpp (HandleEvent): Send
	MotionNotify events if DOM eventtype is "mousemove".
	(SendMouseEvent): Set ButtonMotionMask correctly.

2007-04-10  Chris Toshok  <toshok@ximian.com>

	* compzilla/components/compzillaWindowManager.js: add an EWMH
	inspired layered window stack.

	* compzilla/chrome/skin/desktop.html: add an html tag, just cuz.

	* compzilla/chrome/skin/compzilla.css: add overflow: hidden to the
	html element, so we never see scrollbars on our desktop.
